@@ -18,7 +18,7 @@
 # Contact information: Carbonite Inc., 756 N Pastoria Ave
 # Sunnyvale, CA 94086, USA, or: http://www.zmanda.com
 
-use Test::More tests => 188;
+use Test::More tests => 190;
 
 use strict;
 use warnings;
@@ -891,6 +891,15 @@ is($Installcheck::Run::exit_code, 4,
     "amreport correctly report vault1");
 results_match($out_filename, $cat->get_text('report'),
     "..result matches 28");
+
+setup_config(catalog => 'vault2', want_template => 0, vault1 => 1);
+
+config_init($CONFIG_INIT_EXPLICIT_NAME, "TESTCONF");
+run($amreport, 'TESTCONF', '-f', $out_filename);
+is($Installcheck::Run::exit_code, 0,
+    "amreport correctly report vault2");
+results_match($out_filename, $cat->get_text('report'),
+    "..result matches 29");
 exit;
 
 cleanup();
