@@ -1,4 +1,10 @@
 2017-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* perl/Amanda/Taper/Worker.pm: Fix for one of the previous patch
+	* installcheck/Makefile.am (catalogs): Add catalogs/vault2.cat
+	* installcheck/amreport.pl: Check successful vault
+	* installcheck/catalogs/vault2.cat: New catalog
+
+2017-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* perl/Amanda/Report/human.pm: Fix tape_rape for VAULT
 	* installcheck/catalogs/vault1.cat: Fxi test
 
